pkg/front_end/testcases/inference/downwards_inference_assignment_statements.dart.type_promotion.expect
pkg/front_end/testcases/inference/downwards_inference_assignment_statements.dart:10:5: Context: Write to l@288
  l = /*@typeArgs=int*/ [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"];
    ^
pkg/front_end/testcases/inference/downwards_inference_assignment_statements.dart:11:10: Context: Write to l@288
  l = (l = /*@typeArgs=int*/ [1]);
         ^
pkg/front_end/testcases/inference/downwards_inference_assignment_statements.dart:11:5: Context: Write to l@288
  l = (l = /*@typeArgs=int*/ [1]);
    ^
